tests/neg/semantic_file_open_bad_type.baa
// EXPECT: نوع المعامل 1 في 'فتح_ملف' غير متوافق

صحيح الرئيسية() {
    عدم* ف = فتح_ملف(١, "قراءة").
    إرجع ٠.
}

